--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,10 +2,24 @@
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-4">
-        <h2 class="title is-2">Edit <%= resource_name.to_s.humanize %></h2>
+        <%= render "profile" %>
+      </div>
+      <div class="column is-8">
+        <h2 class="title is-4">Edit your profile</h2>
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= f.error_notification %>
           <div class="form-inputs">
+            <div class="field">
+              <div class="control">
+                <%= f.input :name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "name", class: "input" },
+                  label_html: { class: "label" },
+                  wrapper: false
+                %>
+              </div>
+            </div>
             <div class="field">
               <div class="control">
                 <%= f.input :email,
