--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,17 @@
           <div class="form-inputs">
             <div class="field">
               <div class="control">
+                <%= f.input :name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "name", class: "input" },
+                  label_html: { class: "label" },
+                  wrapper: false
+                %>
+              </div>
+            </div>
+            <div class="field">
+              <div class="control">
                 <%= f.input :email,
                   required: true,
                   autofocus: true,
