--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Chunhatnhacthai</title>
+    <title>Chu Nhat Nhac Thai</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -45,7 +45,7 @@
             <div class="field is-grouped">
               <% if user_signed_in? %>
                 <p class="control">
-                  <%= link_to home_index_path, class:"button is-primary"  do %>
+                  <%= link_to new_video_path, class:"button is-primary"  do %>
                     <span class="icon is-small"><i class="fa fa-upload"></i></span>
                     <span>New Shot</span>
                   <% end %>
