--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,6 +11,18 @@
           <div class="form-inputs">
             <div class="field">
               <div class="control">
+                <output id="list"></output>
+                <div id="drop_zone">Drag your avatar here to change</div>
+                <br />
+                <%= f.input :user_avatar, 
+                  label: false,
+                  input_html: { class: "", type: "file" },
+                  wrapper: false,
+                  label_html: { class: "file-label" } %>
+              </div>
+            </div>
+            <div class="field">
+              <div class="control">
                 <%= f.input :name,
                   required: true,
                   autofocus: true,
